Dev-RBI/src/objects/AWS_S3_Object__c.object
<CustomObject>
    <description>Represents a bucket and object name as it exists on Amazon S3</description>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>FULL_CONTROL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>public-read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>private</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>image/gif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>image/jpeg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>image/png</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>text/html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>text/plain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pdf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jpg</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUp_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It relates this record to FollowUp visit.</description>
        <label>FollowUp Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>AWS S3 Objects (FollowUp Visit)</relationshipLabel>
        <relationshipName>FollowUpAWS_S3_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preview_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://s3.amazonaws.com/&apos;&amp; Bucket_Name__c &amp;&apos;/&apos;&amp; File_Name__c , 
&apos;https://s3.amazonaws.com/&apos; &amp; Bucket_Name__c &amp;&apos;/&apos;&amp; File_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open the resource in a new window</inlineHelpText>
        <label>Preview Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Images</relationshipLabel>
        <relationshipName>AWS_S3_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Name_Calc__c</fullName>
        <description>Used for DVU and TSR</description>
        <formula>IF(Report_Type__c = &apos;TSR&apos;, &apos;Title Search Report&apos;,Report_Type__c&amp;&apos; Report&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <description>Stores the value DVU or TSR</description>
        <label>Report Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to store tower images</description>
        <label>Tower</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Images</relationshipLabel>
        <relationshipName>AWS_S3_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>AWS S3 Objects</relationshipLabel>
        <relationshipName>Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>imageurl__c</fullName>
        <formula>&apos;https://s3.amazonaws.com/&apos; &amp;  Bucket_Name__c  &amp; &apos;/&apos; &amp;  File_Name__c</formula>
        <label>imageurl</label>
        <type>Text</type>
    </fields>
    <label>AWS S3 Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Access__c</columns>
        <columns>Bucket_Name__c</columns>
        <columns>Content_Type__c</columns>
        <columns>File_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AWS-{0000}</displayFormat>
        <label>AWS S3 Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS S3 Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>